# pygame3d

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pygame3d/: light.py  surface3d.py
samples/: avocado.py  initialization.py  models.py  pixel_art.py
