[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame3d"
version = "0.0.1"
description = "A library for 3D rendering in PyGame"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Fr5ctal", email = "fr5ctal@gmail.com" },
]
requires-python = ">=3.7"
dependencies = [
    "panda3d>=1.10.15",
    "panda3d-gltf>=1.2.1",
    "pygame>=2.0.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/Fr5ctal-Projects/pygame3d"
